--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   </head>
   <body>
     <h1>
-      salam
+      imag test
     </h1>
-   <button>
-     my
-   </button>
-    <tagname>
-      hello
-    </tagname>
+   
+   <h2>test1: ./</h2> 
+    <img src="./ test/images.png"/>
+     <img src="">
+   
   </body>
 </html>
 
