--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
    
    <h2>test1: ./</h2> 
     <img src="./test/images.png"  />
-  
-   
+  <h2>test2: ./</h2>
+   <img src="./test/css/../images.png">
+    <h2>test3: ./</h2>
+    <img src="/test/images.png">
   </body>
 </html>
 
