--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
    <img src="./test/css/../images.png">
     <h2>test3: ./</h2>
     <img src="/test/images.png">
+    <h2>tes4</h2>
+    <img src="https://abolfazl511.github.io/test/images.png">
   </body>
 </html>
 
